Basis-Test für ViewServiceInterface-Implementierungen erstellen (#614)
* Klassen in passende packages schieben

* SQL-Resource umbenennen

* View-Funktionalitäten aneinenander anpassen

* Konstruktoren zum einfacherern testen

* Nullpointer verhindern

* Resourcennamen anpassen

* Basis-Test für ViewServiceInterface-Implementierungen erstellen

damit können wir sichergehen, dass sich alle Implementierungen gleich
verhalten.

Außerdem können die View-Anfragen direkt mit einer Datenbank getestet
werden

* RF: Kommentare anpassen

* Tests sinnvoll anordnen